--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@remix-run/netlify": "^1.13.0",
     "@remix-run/node": "^1.13.0",
     "@remix-run/react": "^1.13.0",
+    "@remix-validated-form/with-zod": "^2.0.5",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "remix-validated-form": "^4.6.11",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.13.0",
